--- a/appYolo/app/src/main/res/values/base-strings.xml
+++ b/appYolo/app/src/main/res/values/base-strings.xml
@@ -16,5 +16,5 @@
 -->
 
 <resources>
-    <string name="app_name">Android YOLO</string>
+    <string name="app_name">RecogniZer</string>
 </resources>
